[gd_scene load_steps=2 format=3 uid="uid://bugcrswdl11yg"]

[ext_resource type="Script" uid="uid://d3qw217fdhhlu" path="res://autentificacion.gd" id="1_mjb5k"]

[node name="Autentificacion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -520.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mjb5k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.224
anchor_right = 0.25
anchor_bottom = 0.224
offset_left = -20.0
offset_top = -20.512
offset_right = 298.0
offset_bottom = 142.488

[node name="StateLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Login"

[node name="Email" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Email"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="SignupButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sign in"

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SignupButton" to="." method="_on_signup_button_pressed"]
